# netcfg

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt  run.bat
.github/workflows/: release.yml
netcfg/: __init__.py  changelog.py  gui.py  main.py  ping.py  settings.py
netcfg/commands/: arp_scanner.py  ping.py
netcfg/gui/: main.py
netcfg/gui/tabs/: about_tab.py  arp_scan_tab.py  config_tab.py  ping_tab.py
netcfgj/: __init__.py  core.py  gui.py
tests/: test_ping.py
